# flexible-polyline

./: .gitignore  .ort.yml  CONTRIBUTING.md  LICENSE  README.md  function_decode_flexpolyline_HERE.m
.github/workflows/: cpp.yml  pages.yml  publish.yml  release.yml  rust.yml
ABAP/: ZCL_UTIL_TM_POLYLINE.abap  ZPOLYLINE_TEST.abap
Matlab/: README.md  function_decode_flexpolyline_HERE.m  function_encode_flexpolyline_HERE.m  test_function_decode_flexpolyline_HERE.m  test_function_encode_flexpolyline_HERE.m
R/: README.md
cpp/: CMakeLists.txt
cpp/include/hf/: flexpolyline.h
cpp/src/: cli.cpp
cpp/test/: test.cpp
crystal/flexpolyline/: shard.yml
crystal/flexpolyline/spec/: flex_polyline_spec.cr
crystal/flexpolyline/src/: flexpolyline.cr
dart/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
dart/lib/: converter.dart  flexible_polyline.dart  latlngz.dart
dart/test/: decode_test.dart  polyline_test.dart
dart/test/res/: decoded.txt  encoded.txt  original.txt
dotnet/: HERE.FlexiblePolyline.sln
dotnet/src/: LatLngZ.cs  PolylineEncoderDecoder.cs  ThirdDimension.cs
dotnetcore/: FlexiblePolylineEncoder.sln
dotnetcore/PolyLineDecoder/: LatLngZ.cs  PolyLineDecoder.csproj  Program.cs
dotnetcore/PolyLineDecoder/Properties/: AssemblyInfo.cs
dotnetcore/src/: LatLngZ.cs  PolylineEncoderDecoder.cs  ThirdDimension.cs
golang/flexpolyline/: data.go  data_test.go  decode.go  decode_test.go  encode.go  encode_test.go
java/: README.md  pom.xml
javascript/: .npmrc  README.md  cli.js  decode.html  index.d.ts  index.js  package-lock.json  package.json  release.sh
javascript/test/: test.js
kotlin/: README.md
php/: .gitattributes  .travis.yml  README.md  composer.json
php/src/: FlexiblePolyline.php
php/tests/: DecoderTest.php  EncoderTest.php  FlexiblePolylineTest.php  OtherTest.php
python/: .gitignore  README.md  setup.py  test_flexpolyline.py
python/flexpolyline/: __init__.py  decoding.py  encoding.py
ruby/: .gitignore  .rubocop.yml  Gemfile  README.md  flexpolyline.gemspec
ruby/lib/: flexpolyline.rb
ruby/spec/: base_spec.rb  spec_helper.rb
rust/: Cargo.toml  README.md
rust/examples/: random.rs
rust/src/: cli.rs  lib.rs
test/: original.txt
test/round_half_even/: decoded.txt  encoded.txt
test/round_half_up/: decoded.txt  encoded.txt
(+15 files in other folders)
