[package]
name = "flexpolyline"
version = "0.1.0"
description = "Flexible Polyline encoding: a lossy compressed representation of a list of coordinate pairs or triples"
authors = ["HERE Europe B.V."]
repository = "https://github.com/heremaps/flexible-polyline.git"
license = "MIT"
keywords = ["polyline", "encoding"]
edition = "2018"

[dependencies]

[dev-dependencies]
rand = "0.6.5"

[[bin]]
name = "flexpolyline"
path = "src/cli.rs"
